@@ -4,7 +4,7 @@
  *
  * This file contains routines to handle the CService HELP command.
  *
- * $Id: help.c 4613 2006-01-19 23:52:30Z jilles $
+ * $Id: help.c 5141 2006-05-01 14:10:38Z jilles $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"chanserv/help", FALSE, _modinit, _moddeinit,
-	"$Id: help.c 4613 2006-01-19 23:52:30Z jilles $",
+	"$Id: help.c 5141 2006-05-01 14:10:38Z jilles $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -110,8 +110,16 @@ static void cs_cmd_help(char *origin)
 		notice(chansvs.nick, origin, "\2/%s%s help <command>\2", (ircd->uses_rcommand == FALSE) ? "msg " : "", chansvs.disp);
 		notice(chansvs.nick, origin, " ");
 
-		command_help(chansvs.nick, origin, cs_cmdtree);
+		command_help_short(chansvs.nick, origin, cs_cmdtree, "REGISTER OP INVITE UNBAN FLAGS RECOVER");
 
+		notice(chansvs.nick, origin, "***** \2End of Help\2 *****");
+		return;
+	}
+
+	if (!strcasecmp("COMMANDS", command))
+	{
+		notice(chansvs.nick, origin, "***** \2%s Help\2 *****", chansvs.nick);
+		command_help(chansvs.nick, origin, cs_cmdtree);
 		notice(chansvs.nick, origin, "***** \2End of Help\2 *****");
 		return;
 	}
